@@ -1,0 +1,33 @@
+!
+! Copyright (C) 2005 WanT Group
+!
+! This file is distributed under the terms of the
+! GNU General Public License. See the file `License'
+! in the root directory of the present distribution,
+! or http://www.gnu.org/copyleft/gpl.txt .
+!
+! Taken from Numerical Recipies
+!
+!=-----------------------------------------------------=
+      SUBROUTINE locate( xx, n, x, j )
+!=-----------------------------------------------------=
+      USE kinds, ONLY : dbl
+      IMPLICIT NONE
+
+      INTEGER j,n
+      REAL(dbl) :: x,xx(n)
+      INTEGER jl,jm,ju
+      jl=0
+      ju=n+1
+10    if(ju-jl.gt.1)then
+        jm=(ju+jl)/2
+        if((xx(n).gt.xx(1)).eqv.(x.gt.xx(jm)))then
+          jl=jm
+        else
+          ju=jm
+        endif
+      goto 10
+      endif
+      j=jl
+      return
+      END
