@@ -20,31 +20,31 @@
    wannier_thr = 1.0e-8
 /
 
-WANNIER_CENTERS 
-atomic 1  0   0   1.0
-atomic 1  1  -1   1.0
-atomic 2  0   0   1.0
-atomic 2  1  -1   1.0
-atomic 3  0   0   1.0
-atomic 3  1  -1   1.0
-atomic 4  0   0   1.0
-atomic 4  1  -1   1.0
-atomic 5  0   0   1.0
-atomic 5  1  -1   1.0
-atomic 6  0   0   1.0
-atomic 6  1  -1   1.0
-atomic 7  0   0   1.0
-atomic 7  1  -1   1.0
-atomic 8  0   0   1.0
-atomic 8  1  -1   1.0
-atomic 9  0   0   1.0
-atomic 9  1  -1   1.0
-atomic 10  0   0   1.0
-atomic 10  1  -1   1.0
-atomic 11  0   0   1.0
-atomic 11  1  -1   1.0
-atomic 12  0   0   1.0
-atomic 12  1  -1   1.0
+WANNIER_CENTERS {crystal}
+1gauss        0.000000000    0.000000000    0.062500000      0  0   0.8   1.0
+1gauss        0.166666667   -0.166666667    0.145833333      0  0   0.8   1.0
+1gauss        0.333333333   -0.333333333    0.229166667      0  0   0.8   1.0
+1gauss        0.666666666   -0.166666667    0.145833333      0  0   0.8   1.0
+1gauss        0.500000000    0.000000000    0.312500000      0  0   0.8   1.0
+1gauss        0.666666667    0.333333333    0.395833333      0  0   0.8   1.0
+1gauss        0.500000000    0.500000000    0.312500000      0  0   0.8   1.0
+1gauss        1.000000000    0.500000000    0.312500000      0  0   0.8   1.0
+1gauss        0.333333333    0.166666667    0.479166666      0  0   0.8   1.0
+1gauss        0.000000000    0.000000000    0.562500000      0  0   0.8   1.0
+1gauss        0.166666667   -0.166666667    0.645833333      0  0   0.8   1.0
+1gauss        0.333333333   -0.333333333    0.729166667      0  0   0.8   1.0
+1gauss        0.666666666   -0.166666667    0.645833333      0  0   0.8   1.0
+1gauss        0.500000000    0.000000000    0.812500000      0  0   0.8   1.0
+1gauss        0.666666667    0.333333333    0.895833333      0  0   0.8   1.0
+1gauss        0.500000000    0.500000000    0.812500000      0  0   0.8   1.0
+1gauss        1.000000000    0.500000000    0.812500000      0  0   0.8   1.0
+1gauss        0.166666666    0.333333333    0.145833333      0  0   0.8   1.0
+1gauss        0.833333333    0.166666667    0.479166666      0  0   0.8   1.0
+1gauss        0.833333334    0.666666667    0.479166666      0  0   0.8   1.0
+1gauss        0.166666666    0.333333333    0.645833333      0  0   0.8   1.0
+1gauss        0.333333333    0.166666667    0.979166666      0  0   0.8   1.0
+1gauss        0.833333333    0.166666667    0.979166666      0  0   0.8   1.0
+1gauss        0.833333334    0.666666667    0.979166666      0  0   0.8   1.0
 
 
 
